fixed a little spacing

--- a/css/main.css
+++ b/css/main.css
@@ -122,7 +122,7 @@ loc {
    letter-spacing: 2px;
    float: right;
    
-   margin:5px 0px;
+   margin:3px 0px 5px;
 }
 
 #header {
